--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "next": "^12.2.5",
     "next-auth": "^4.10.3",
     "next-images": "^1.8.4",
+    "next-yandex-metrika": "^1.0.0",
     "nodemailer": "^6.7.8",
     "notistack": "^2.0.5",
     "react": "^18.2.0",
